k8s/kube-deployment/dotnetexample.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetexample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cbdotnet
  template:
    metadata:
      labels:
        app: cbdotnet
    spec:
      containers:
        - name: cbdotnetexample
          image: dotnetappdemo:0.12
          # volumeMounts:
          #   - name: couchbase-user
          #     mountPath: "/deployments/txnexample/creds"
          #     readOnly: true
          #   - name: txnexample-config
          #     mountPath: "/deployments/txnexample/config"
      # volumes:
      #   - name: txnexample-config
      #     configMap:
      #       name: txnexamplecm
      #   - name: couchbase-user
      #     secret:
      #       secretName: txn-example-user
      #       items:
      #         - key: username
      #           path: username
      #         - key: password
      #           path: password
---
kind: Service
apiVersion: v1
metadata:
  name: dotnetexample
  labels:
    app: cbdotnet
    release: cbdotnet
spec:
  selector:
    app: cbdotnet
  ports:
    - port: 8080
      name: txnhttp
    - port: 9000
      name: metrics
