k8s/kube-deployment/cb-operator-dac-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.5.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - -zap-log-level=info
        - -tls-cert-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.crt
        - -tls-private-key-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.key
        - -validate-secrets=true
        - -validate-storage-classes=true
        command:
        - couchbase-admission-controller
        image: ghcr.io/cb-vanilla/admission-controller:2.5.0-133
        imagePullPolicy: IfNotPresent
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      imagePullSecrets:
        - name: ghcr-login-secret
      securityContext:
        runAsNonRoot: true
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.5.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    config.couchbase.com/version: 2.5.0
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQVB6NUYyWU4zdWwvaFFsTk96azE1bEF3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweQpNekEwTVRBeU16SXpORFJhRncwek16QTBNRGN5TXpJek5EUmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUN0WVRzczFvRjErTHNBOFVxdUZ2VVBueGFPZ0ltQ0lGKzFZdzZqOHBpVW9iSm1Bci9wMWt1dwpybUJDWnVmUEZYQn [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/validate
  failurePolicy: Fail
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
    - couchbasecollections
    - couchbasecollectiongroups
    - couchbasescopes
    - couchbasescopegroups
    - couchbasemigrationreplications
  sideEffects: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.5.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8383"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: couchbase-operator
    spec:
      containers:
      - args:
        - --pod-create-timeout=10m0s
        - --pod-delete-delay=0s
        - --zap-log-level=info
        command:
        - couchbase-operator
        image: ghcr.io/cb-vanilla/operator:2.5.0-133
        imagePullPolicy: IfNotPresent
        name: couchbase-operator
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8383
          name: prometheus
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
            scheme: HTTP
        resources: {}
      imagePullSecrets:
        - name: ghcr-login-secret
      securityContext:
        runAsNonRoot: true
      serviceAccountName: couchbase-operator
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.5.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  ports:
  - name: http-pprof
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-prometheus
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app: couchbase-operator
